--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 main:
-  - title: "Home"
+  - title: "Inicio"
     url: /
-  - title: "Posts"
+  - title: "Blog"
     url: /year-archive/
-  - title: "Categories"
+  - title: "Categorias"
     url: /categories/
   - title: "Tags"
     url: /tags/
